# pay-to-sudoku

./: .gitignore  CMakeLists.txt  Makefile
snark/: CMakeLists.txt  gadget.hpp  gadget.tcc  lib.cpp  snark.hpp  snark.tcc
